src/test/ui/error-codes/E0120.stderr
error[E0120]: the Drop trait may only be implemented on structures
  --> $DIR/E0120.rs:13:15
   |
13 | impl Drop for MyTrait {
   |               ^^^^^^^ implementing Drop requires a struct

error: aborting due to previous error

